Fixed responsiveness issues with the footer cropping pages

--- a/Portfolio/src/Routes/Education/Education.module.css
+++ b/Portfolio/src/Routes/Education/Education.module.css
@@ -65,3 +65,9 @@
 .highlight {
     color: orange;
 }
+@media (max-width: 650px) {
+    .mainPage{
+        min-height: fit-content;
+        padding-bottom: 180px;
+    }
+}
